# Bookstore

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
