[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore"
authors = ["marcelohiginoduarte <marcelihigino@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
factory-boy = "^3.3.0"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
